<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.CadastroLocalActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/logradouroEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/logradouro"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="200"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZÃÁÀÓÔÉÊ abcdefghijklmnopqrstuvwxyzãáàóôeéê"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/numeroCasaEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/numerocasa"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="5"
                    />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/complementoEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/complemento"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="200"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZÃÁÀÓÔÉÊ abcdefghijklmnopqrstuvwxyzãáàóôeéê0123456789"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bairroEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/bairro"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="100"
                    android:digits= "ABCDEFGHIJKLMNOPQRSTUVWXYZÃÁÀÓÔÉÊ abcdefghijklmnopqrstuvwxyzãáàóôeéê"
                    />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cidadeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/cidade"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="200"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZÃÁÀÓÔÉÊ abcdefghijklmnopqrstuvwxyzãáàóôeéê"
                    />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ufEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/uf"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="2"
                    />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cepEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/cep"
                    android:maxLines="1"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="8"
                    />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/responsavelEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/nomeResponsavel"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:maxLength="200"
                android:inputType="text"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZÃÁÀÓÔÉÊ abcdefghijklmnopqrstuvwxyzãáàóôeéê"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/telefoneResponsavelEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/telefone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:maxLength="15"
                android:inputType="phone"
                android:digits="0123456789() -"
                />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
     <Button
         android:id="@+id/btnContaBancaria"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:text="Conta Bancaria"
         android:textColor="@color/colorAccent"
         android:background="@color/colorPrimaryDark"
         android:gravity="left|center_vertical"
         android:paddingLeft="5dp"


         />

        <Button
            android:id="@+id/btnNecessidade"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="Necessidades"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimaryDark"
            android:gravity="left|center_vertical"
            android:paddingLeft="5dp"

            />
    </LinearLayout>

</ScrollView>